# lidar-projekti

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  arduinodocs.py  lidar.atsln  platformio.ini  pyproject.toml  setup-build-env.sh
.github/workflows/: codeql-analysis.yml  dependabot_updates.yml  gitlab_sync.yml  pylint.yml
circuits/lidar_projekti/: lidar_projekti-cache.lib  lidar_projekti.kicad_pcb  lidar_projekti.pro  lidar_projekti.sch
extras/docs/: Doxyfile  conf.py  index.rst
lidar/: doxySettings.xml  doxyfile  lidar.cproj  main.c
lidar-atmel/: lidar.componentinfo.xml  lidar.cproj
lidar-atmel/doxygen/html/: _license.html  _r_t_e___components_8h_source.html  adc__window_8h.html  adc__window_8h_source.html  adc__window__example_8c.html  adc__window__example_8h.html  adc__window__example_8h_source.html  assembler_8h_source.html  atmel__start_8h_source.html  atomic_8h.html  atomic_8h_source.html  bod_8h.html  bod_8h_source.html  compiler_8h.html  cpuint_8c.html  cpuint_8h_source.html  debug_8h_source.html  dir_146144c007e01b61e63813d5d90e3542.html  dir_195408a26b463eda330f9b5a1a27e36f.html  dir_1d5108d52d9066c2943edd9e8838e4e3.html  (+39 more)
lidar-atmel/include/: atmel_start_pins.h  driver_init.h  usart_basic.h
lidar-atmel/src/: adc_window.c  usart_basic.c
lidar-atmel/utils/: adc.c  adc.h  debug.h  usart.c  usart.h
lidar-projekti/: main.cpp
lidar/.atmelstart/: AtmelStart.gpdsc  atmel_start_config.atstart
lidar/Config/: RTE_Components.h
lidar/include/: adc_window.h
lidar/src/: driver_init.c  vref.c
src/: main.cpp
(+190 files in other folders)
