[tool.poetry]
name = "lidar-projekti"
version = "0.1.0"
description = ""
authors = ["Lari Liuhamo <diapolo10@gitlab.tamk.cloud>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
breathe = "^4.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
