[tool.poetry]
name = "lidar-projekti"
version = "0.1.0"
description = ""
authors = ["Lari Liuhamo <diapolo10@gitlab.tamk.cloud>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.0"

[tool.poetry.dev-dependencies]
Sphinx = "^9.0.4"
breathe = "^4.36.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
